@startuml
skinparam classAttributeIconSize 0

package "com.miproyecto.agendatelefonica.model" {
    class Contacto {
        - String nombre
        - String apellido
        - String telefono
        --
        + Contacto(String nombre, String apellido, String telefono)
        + String getNombre()
        + String getApellido()
        + String getTelefono()
        + void setTelefono(String telefono)
        + boolean equals(Object obj)
        + int hashCode()
    }
}

package "com.miproyecto.agendatelefonica.service" {
    class Agenda {
        - List<Contacto> contactos
        - int capacidadMaxima
        --
        + Agenda()
        + Agenda(int capacidadMaxima)
        + boolean añadirContacto(Contacto c)
        + boolean existeContacto(Contacto c)
        + void listarContactos()
        + Contacto buscaContacto(String nombre, String apellido)
        + boolean eliminarContacto(Contacto c)
        + boolean modificarTelefono(String nombre, String apellido, String nuevoTelefono)
        + boolean agendaLlena()
        + int espaciosLibres()
    }
}

package "com.miproyecto.agendatelefonica" {
    class Main {
        + static void main(String[] args)
    }
}

Contacto --> Agenda : usado en
Main --> Agenda : usa
@enduml
